--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div> -->
 
     <div id="sbs-div">
-        <a id="sbs-link" href="https://sitesbysam.dev"><img src="assets/logo-black.png"/></a>
+        <a id="sbs-link" href="https://sitesbysam.dev"><img src="assets/sitesbysamdev(LIGHTBKGD).png"/></a>
     </div>
  
 </body>
