added x close button for modal

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
         <!-- Modal content -->
         <div class="modal-content">
-            <span class="close">&times;</span>
+            <!-- <span class="close">&times;</span> -->
+            <span class="close">x</span>
             <img id="latest-release-header" src="assets/latestrelease.png"/>
             <!-- <h2>Latest Release</h2> -->
             <!-- <iframe id="latest-release-coverart" style="border: 0; width: 350px; height: 300px;" src="https://bandcamp.com/EmbeddedPlayer/album=27971770/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/" seamless></iframe> -->
@@ -371,15 +372,15 @@
     } 
     /* The Close Button */
     .close {
-      color: #aaa;
+      color: rgb(139, 139, 139);
       float: right;
-      font-size: 28px;
+      font-size: 20px;
       font-weight: bold;
     }
 
     .close:hover,
     .close:focus {
-      color: black;
+      color: rgba(126, 126, 126, 0.61);
       text-decoration: none;
       cursor: pointer;
     }
