updated insta link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!-- Icons -->
     <div id="icon-block">
-        <a class="icons-link" id="instagram-link" href="https://www.instagram.com/kingkombo2.0/"><img class="icons-img" id="instagram" src="assets/icons/instagram.png"></a>
+        <a class="icons-link" id="instagram-link" href="https://www.instagram.com/kombospace/"><img class="icons-img" id="instagram" src="assets/icons/instagram.png"></a>
         <a class="icons-link" id="email-link" href="mailto:89kbeats@gmail.com"><img id="email" class="icons-img" src="assets/icons/email.png"></a>
         <a class="icons-link" id="facebook-link" href="https://facebook.com/ecmonstersma"><img id="facebook" class="icons-img" src="assets/icons/facebook.png"></a>
     </div>
